--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*__pycache__*
 *.py[cod]
 *$py.class
+
+# Pycharm project files
+*.idea
+
+# Binaries
+*.bin
 
 # C extensions
 *.so
